# regnmed

./: .env.example  .gitignore  CLA.md  CLAUDE.md  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  ROADMAP.md  docker-compose.yml
.claude/: launch.json
.github/workflows/: ci.yml
crates/regnmed-api/: Cargo.toml
crates/regnmed-api/portal/: app.css  app.js  index.html  theme.js
crates/regnmed-api/src/: anchor.rs  auth.rs  bank.rs  dimension.rs  engagement.rs  innboks.rs  invoice.rs  invoice_template.rs  lib.rs  mailq.rs  main.rs  marketplace.rs  ocr.rs  period.rs  portal.rs  purring.rs  reports.rs  reskontro.rs  salgsdokument.rs  settings.rs  timesheet.rs  utsendelse.rs
crates/regnmed-api/tests/: anchor.rs  bank.rs  dimensions.rs  engagement.rs  faktura_pdf.rs  innboks.rs  invoice.rs  invoice_template.rs  kontoplan.rs  marketplace.rs  me_endpoint.rs  ocr.rs  period_attachments.rs  purring.rs  regnskap.rs  reports.rs  reskontro.rs  revisjon.rs  saft_migration.rs  salgsdokument.rs  seed_browser.rs  timesheet.rs  utsendelse.rs
crates/regnmed-api/tests/common/: mod.rs
crates/regnmed-cli/: Cargo.toml
crates/regnmed-cli/src/: main.rs
crates/regnmed-core/: Cargo.toml
crates/regnmed-core/src/: anchor.rs  bank.rs  bankcsv.rs  camt053.rs  error.rs  fakturapdf.rs  hash.rs  invoice.rs  kid.rs  kontoplan.rs  lib.rs  money.rs  mva.rs  mvamelding.rs  ocr.rs  orgnr.rs  pdf.rs  purring.rs  regnskap.rs  revisjon.rs  saft.rs  saft_import.rs  sats.rs  voucher.rs  xml.rs
crates/regnmed-db/: Cargo.toml
crates/regnmed-db/migrations/: 0001_master_data.sql  0002_ledger.sql  0003_append_only.sql  0004_app_role.sql  0005_tenancy.sql  0006_mva.sql  0007_bank.sql  0008_ocr.sql  0009_reskontro.sql  0010_invoice.sql  0011_period_lock_attachments.sql  0012_marketplace.sql  0013_engagement_flow.sql  0014_anchoring.sql  0015_innboks.sql  0016_sats.sql  0017_purring.sql  0018_dimensions.sql  0019_kontaktinfo.sql  0020_utsendelse.sql  0021_invoice_template.sql  0022_salgsdokument.sql  0023_timesheet.sql
crates/regnmed-db/src/: anchor.rs  attachment.rs  bank.rs  dimension.rs  engagement.rs  innboks.rs  invoice.rs  invoice_template.rs  ledger.rs  lib.rs  marketplace.rs  mva.rs  ocr.rs  opening.rs  period.rs  purring.rs  regnskap.rs  reskontro.rs  revisjon.rs  saft.rs  saft_import.rs  salgsdokument.rs  sats.rs  settings.rs  tenancy.rs  timesheet.rs  utsendelse.rs
crates/regnmed-db/tests/: ledger.rs  mva.rs
crates/regnmed-gov/: Cargo.toml
crates/regnmed-gov/src/: brreg.rs  finanstilsynet.rs  lib.rs  maskinporten.rs  mvamelding.rs  tsa.rs
deploy/base/: kustomization.yaml  postgres.yaml  regnid-mail-worker.yaml  regnid.yaml  regnmed-api.yaml
deploy/local/: coredns-custom.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  nats.yaml  postgres.yaml  regnmed-api.yaml
deploy/prod/: backup.yaml  cert-issuer.yaml  ingress.yaml  kustomization.yaml
deploy/prod/patches/: anchor-cronjob.yaml  postgres.yaml  regnid.yaml  regnmed-api.yaml
docs/: README.md  anchoring.md  auth.md  bank.md  bilagsinnboks.md  deploy.md  dimensjoner.md  faktura.md  frugality.md  gov.md  ledger.md  marketplace.md  migration.md  mva.md  perioder.md  portal.md  purring.md  rapporter.md  regelverk.md  reskontro.md  revisjon.md  timer.md
docs/saft/: README.md  naeringsspesifikasjon_2025-2026.csv
scripts/: backup-verify.sh  build-css.sh  build-images.sh  dev-cluster.sh  dev-db.sh  frugality.sh
ui/: input.css  package-lock.json  package.json  themes.css
