[workspace]
resolver = "2"
members = [
    "crates/regnmed-core",
    "crates/regnmed-db",
    "crates/regnmed-api",
    "crates/regnmed-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"
repository = "https://github.com/bisand/regnmed"

[workspace.dependencies]
regnmed-core = { path = "crates/regnmed-core" }
regnmed-db = { path = "crates/regnmed-db" }

anyhow = "1"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v7", "serde"] }
