[workspace]
resolver = "2"
members = [
    "crates/regnmed-core",
    "crates/regnmed-db",
    "crates/regnmed-api",
    "crates/regnmed-cli",
    "crates/regnmed-gov",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"
repository = "https://github.com/bisand/regnmed"

[workspace.dependencies]
async-nats = "0.42"
futures-util = "0.3"
regnmed-core = { path = "crates/regnmed-core" }
regnmed-db = { path = "crates/regnmed-db" }

anyhow = "1"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
hex = "0.4"
jsonwebtoken = "9"
quick-xml = "0.37"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "v7", "serde"] }

# dev-dependencies (test-only)
base64 = "0.22"
rand = "0.8"
rsa = "0.9"
tower = { version = "0.5", features = ["util"] }
