[package]
name = "regnmed-api"
description = "HTTP API for regnmed"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
regnmed-db.workspace = true

anyhow.workspace = true
axum.workspace = true
dotenvy.workspace = true
jsonwebtoken.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
base64.workspace = true
chrono.workspace = true
rand.workspace = true
rsa.workspace = true
tower.workspace = true
