[package]
name = "regnmed-cli"
description = "regnmed administration: migrations, ledger verification, demo data"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "regnmed"
path = "src/main.rs"

[dependencies]
regnmed-core.workspace = true
regnmed-db.workspace = true
regnmed-gov = { path = "../regnmed-gov" }

anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
dotenvy.workspace = true
hex.workspace = true
sqlx.workspace = true
tokio.workspace = true
uuid.workspace = true
