[package]
name = "regnmed-db"
description = "PostgreSQL persistence for the regnmed ledger: migrations, posting and chain verification"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
regnmed-core.workspace = true

anyhow.workspace = true
hex.workspace = true
chrono.workspace = true
sqlx.workspace = true
uuid.workspace = true

[dev-dependencies]
dotenvy.workspace = true
tokio.workspace = true
