[package]
name = "regnmed-gov"
description = "Government API clients: Maskinporten machine-to-machine auth and Skatteetaten's mva-melding APIs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
jsonwebtoken.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
axum.workspace = true
base64.workspace = true
rand.workspace = true
rsa.workspace = true
